k8s/06-security/allow-data-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apis-to-data
  namespace: ns-data # La règle se place là où sont les cibles (SQL/Redis)
spec:
  # On applique cette règle à tous les pods de ns-data (SQL, Redis, RabbitMQ)
  podSelector: {} 
  policyTypes:
  - Ingress
  ingress:
  - from:
    # On autorise tout le trafic venant du namespace 'projet-apps'
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: projet-apps
    ports:
    - protocol: TCP
      port: 1433  # SQL Server
    - protocol: TCP
      port: 6379  # Redis
    - protocol: TCP
      port: 5672  # RabbitMQ AMQP
    - protocol: TCP
      port: 15672 # RabbitMQ Management
